<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/black"
tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/download"
        tools:srcCompat="@drawable/download" />
<ScrollView
android:layout_width="match_parent"
android:layout_height="match_parent">
<TableLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:stretchColumns="*">
<TableRow
android:layout_width="0dp"
android:layout_height="wrap_content"
android:paddingBottom="8dp">
<Button
android:id="@+id/buttonZoomIn"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="5dp"
android:backgroundTint="@color/white"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:text="@string/zoomin"
android:textColor="@color/black" />
<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/buttonZoomOut"
android:text="@string/zoomout"
android:layout_marginStart="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:layout_marginEnd="10dp"
android:backgroundTint="@color/white"
android:textColor="@color/black"/>
</TableRow>
<TableRow
android:layout_width="0dp"
android:layout_height="wrap_content"
android:paddingBottom="8dp">
<Button
android:id="@+id/buttonFadeIn"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:text="@string/fadein"
    android:backgroundTint="@color/white"
android:textColor="@color/black" />
<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/buttonFadeOut"
android:text="@string/fadeout"
android:layout_marginStart="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:layout_marginEnd="10dp"
    android:backgroundTint="@color/white"
android:textColor="@color/black"/>
</TableRow>
<TableRow
android:layout_width="0dp"
android:layout_height="wrap_content"
android:paddingBottom="8dp">
<Button
android:id="@+id/buttonSlideLeft"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:text="@string/slideleft"
    android:backgroundTint="@color/white"
android:textColor="@color/black" />
<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/buttonSlideRight"
android:text="@string/slideright"
android:layout_marginStart="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:layout_marginEnd="10dp"
    android:backgroundTint="@color/white"
android:textColor="@color/black"/>
</TableRow>
<TableRow
android:layout_width="0dp"
android:layout_height="wrap_content"
android:paddingBottom="8dp">
<Button
android:id="@+id/buttonSlideUp"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:text="@string/slideup"
    android:backgroundTint="@color/white"
android:textColor="@color/black" />
<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/buttonSlideDown"
android:text="@string/slidedown"
android:layout_marginStart="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:layout_marginEnd="10dp"
    android:backgroundTint="@color/white"
android:textColor="@color/black"/>
</TableRow>
<TableRow
android:layout_width="0dp"
android:layout_height="wrap_content"
android:paddingBottom="8dp">
<Button
android:id="@+id/buttonZoomInFadeIn"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:text="@string/zoominfadein"
    android:backgroundTint="@color/white"
android:textColor="@color/black" />
<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/buttonZoomOutFadeOut"
android:text="@string/zoomoutfadeout"
android:layout_marginStart="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:layout_marginEnd="10dp"
    android:backgroundTint="@color/white"
android:textColor="@color/black"/>
</TableRow>
<TableRow
android:layout_width="0dp"
android:layout_height="wrap_content"
android:paddingBottom="8dp">
<Button
android:id="@+id/buttonRotate"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="10dp"
android:layout_marginEnd="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:text="@string/Rotate"
    android:backgroundTint="@color/white"
android:textColor="@color/black" />
<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/buttonMove"
android:text="@string/Move"
android:layout_marginStart="5dp"
android:background="@drawable/button_ripple"
android:fontFamily="@font/poppins"
android:layout_marginEnd="10dp"
    android:backgroundTint="@color/white"
android:textColor="@color/black"/>
</TableRow>
</TableLayout>
</ScrollView>
</LinearLayout>